SERVER-26741 Retain temp collections when node restarted w/o --replSet.

Fixes an issue where temporary collections would be dropped after a
replica set member was restarted as a stand-alone mongod.